# minisat

./: .gitignore  CMakeLists.txt  Makefile  meson.build  update
.github/workflows/: build.yml
minisat/core/: Dimacs.h  Main.cc  Makefile  Solver.cc  Solver.h  SolverTypes.h
minisat/mtl/: Alg.h  Alloc.h  Heap.h  IntMap.h  Map.h  Queue.h  Rnd.h  Sort.h  Vec.h  XAlloc.h
minisat/simp/: Main.cc  Makefile  SimpSolver.cc  SimpSolver.h  sanitize.diff
minisat/utils/: Options.cc  Options.h  ParseUtils.h  System.cc  System.h
